--- a/project.config.json
+++ b/project.config.json
@@ -23,7 +23,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.9.4",
-	"appid": "wx160d6c916c2a5629",
+	"appid": "wx8c9d96728c35d9b3",
 	"projectname": "petlog",
 	"debugOptions": {
 		"hidedInDevtools": []
